--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -75,6 +75,7 @@
         android:layout_width="135dp"
         android:layout_height="135dp"
         android:layout_marginTop="68dp"
+        android:clickable="true"
         android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.887"
