--- a/app/src/main/res/layout/transaction_guide.xml
+++ b/app/src/main/res/layout/transaction_guide.xml
@@ -55,7 +55,7 @@
             app:layout_constraintVertical_bias="0.83" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/beforePrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Destination Place"
